infrastructure/kavita/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kavita
  labels:
    app.kubernetes.io/name: kavita
    app.kubernetes.io/component: media
